--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@
           </div>
           <div class="col-lg-4">
             <span><i class="far fa-lightbulb"></i></span>
-            <h2>Web design</h2>
+            <h2>Web development</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed pariatur cumque itaque incidunt consequuntur laudantium!</p>
           </div>
           <div class="col-lg-4">
             <span><i class="far fa-lightbulb"></i></span>
-            <h2>Web design</h2>
+            <h2>Wordpress development</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed pariatur cumque itaque incidunt consequuntur laudantium!</p>
           </div>
         </div>
